--- a/assets/styles/_typesettings.sass
+++ b/assets/styles/_typesettings.sass
@@ -161,6 +161,19 @@ p
         font-stretch: normal
         line-height: 3
         letter-spacing: 5px
+  &.bio
+    font-family: $sb
+    font-weight: normal
+    font-style: normal
+    font-stretch: normal
+    font-size: 1.5rem
+    line-height: 1.56
+    letter-spacing: normal
+    text-align: center
+    color: $geyser
+    @media only screen and (min-width: $m)
+      font-size: 1.8rem
+      line-height: 1.5
 a
   &.preview-contact-email
     font-family: $sb
